whitespaces fixed

--- a/src/App.css
+++ b/src/App.css
@@ -120,10 +120,6 @@ table.ModelList > tbody > tr:nth-child(even) > td { background-color: #f9f9f9; }
 table.ModelList > tbody > tr:nth-child(odd) > td { background-color: #ffffff; }
 table.ModelList > tbody > tr:hover > td { background-color: #f3f3fc; }
 
-.ModelList .CF:not(:last-child) .CF_Value::after {
-  content: ",";
-}
-
 .ModelList_Select {
   width: 32px;
   text-align: center !important;
