--- a/src/components/Common/CustomField.css
+++ b/src/components/Common/CustomField.css
@@ -10,3 +10,8 @@
 .CF_Key::after {
     content: ":";
 }
+
+.ModelList .CF:not(:last-child) .CF_Value::after {
+    content: ", ";
+}
+  
